--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,9 @@ name = "cow-order-execution-bot"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "cow-order-execution-bot"
+path = "src/main.rs"
 
 [dependencies]
 ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["ws", "rustls"] }
