chore: quality of life improvements

--- a/private-key-secret.yaml
+++ b/private-key-secret.yaml
@@ -4,4 +4,5 @@ metadata:
   name: keeper-private-key-secret 
 type: Opaque
 data:
-  KEEPER_PRIVATE_KEY: # your private key 
+  KEEPER_PRIVATE_KEY: "" # your private key 
+
