--- a/cow-order-execution-bot-deployment.yaml
+++ b/cow-order-execution-bot-deployment.yaml
@@ -28,3 +28,5 @@ spec:
                 secretKeyRef:
                   name: infura-key
                   key: INFURA_API_KEY
+            - name: STARTING_BLOCK_NUMBER
+              value: "CURRENT" # either set to 'current' or a block number where you'd like the bot to start looking for transactions to execute
