--- a/private-key-secret.yaml
+++ b/private-key-secret.yaml
@@ -1,8 +1,10 @@
 apiVersion: v1
 kind: Secret
+apiVersion: v1
+kind: Secret
 metadata:
   name: keeper-private-key-secret 
 type: Opaque
-data:
-  KEEPER_PRIVATE_KEY: "" # your private key 
+stringData:
+  KEEPER_PRIVATE_KEY: # add the private key you want to use here
 
