--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,9 @@ path = "src/main.rs"
 ethers = { version = "0.14.0", features = ["ws", "rustls"] }
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
-eyre = { version = "0.6" }
 serde = "1.0"
 serde_json = "1.0"
 hex = "0.4.3"
+log = "0.4"
+env_logger = "0.8.4"
+anyhow = "1.0.61"
