--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,10 +19,10 @@ jobs:
       - run: "docker login -u $DOCKER_HUB_USERNAME -p $DOCKER_HUB_PASSWORD"
       - run:
           name: "Build image"
-          command: "docker build . -t charlesdalton/cow-order-execution-bot:latest"
+          command: "docker build . -t charlesdalton/milkman:latest"
       - run:
           name: "Push image to DockerHub"
-          command: "docker push charlesdalton/cow-order-execution-bot:latest"
+          command: "docker push charlesdalton/milkman:latest"
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
