--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2021"
 name = "milkman-bot"
 path = "src/main.rs"
 
+[profile.release]
+opt-level = 1
+
 [dependencies]
 ethers = { version = "0.14.0", features = ["ws", "rustls"] }
 reqwest = { version = "0.11", features = ["json"] }
