--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,6 @@ path = "src/main.rs"
 opt-level = 0
 
 [dependencies]
-ethers = { version = "0.14.0", features = ["ws", "rustls"] }
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 serde = "1.0"
@@ -20,3 +19,6 @@ hex = "0.4.3"
 log = "0.4"
 env_logger = "0.8.4"
 anyhow = "1.0.61"
+ethers = { version = "0.17.0", features = ["abigen"] }
+ethers-flashbots = "0.10.0"
+url = { version = "2.2.2", default-features = false }
