--- a/milkman-bot-deployment.yaml
+++ b/milkman-bot-deployment.yaml
@@ -26,7 +26,7 @@ spec:
             - name: INFURA_API_KEY
               valueFrom:
                 secretKeyRef:
-                  name: infura-api-key
+                  name: infura-api-key-secret
                   key: INFURA_API_KEY
             - name: STARTING_BLOCK_NUMBER
               value: "15569270"
