--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,5 +30,9 @@ workflows:
   build-workflow:
     jobs:
       - build:
+          filters:
+            branches:
+              only:
+                - release
           context:
             - "Docker Hub"
