--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,11 @@ serde = "1.0"
 serde_json = "1.0"
 hex = "0.4.3"
 log = "0.4"
-env_logger = "0.8.4"
 anyhow = "1.0.61"
 ethers = { version = "0.17.0", features = ["abigen", "openssl"] }
 url = { version = "2.2.2" }
+tracing = "0.1.37"
+tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 
 [dev-dependencies]
 rand = { version = "0.8.4", features = ["min_const_gen"] }
